[android] Ensure startup tasks run in layout tests.

Bug: 753702
Change-Id: I4007f416df41e09ec0a229f78d7259b6fa7440c7