content/public/browser/browser_main_runner.h
@@ -5,6 +5,7 @@
 #ifndef CONTENT_PUBLIC_BROWSER_BROWSER_MAIN_RUNNER_H_
 #define CONTENT_PUBLIC_BROWSER_BROWSER_MAIN_RUNNER_H_
 
+#include "build/build_config.h"
 #include "content/common/content_export.h"
 
 namespace content {
@@ -26,6 +27,12 @@ class CONTENT_EXPORT BrowserMainRunner {
   // copied. Returning a non-negative value indicates that initialization
   // failed, and the returned value is used as the exit code for the process.
   virtual int Initialize(const content::MainFunctionParams& parameters) = 0;
+
+#if defined(OS_ANDROID)
+  // Run all queued startup tasks. Only defined on Android because other
+  // platforms run startup tasks immediately.
+  virtual void SynchronouslyFlushStartupTasks() = 0;
+#endif  // OS_ANDROID
 
   // Perform the default run logic.
   virtual int Run() = 0;
